Removed warnings and adjusted to API changes.